[package]
name = "transparency_one"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
futures = "0.3.31"
mongodb = "3.1.0"
openssl = "0.10.66"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
